--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angularfire2": "^5.0.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.5",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
